Fixes word wrapping? maybe?

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+body {
+	word-wrap: break-word;
+}
+
 .navbar-brand {
 	font-size: 1.5em;
 }
